--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.cloud.config.server.jdbc.order=0
 spring.security.user.name=user
 spring.security.user.password=user
 
+encrypt.key=sdfghgfdsdfghgf
