encryption have been disabled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.cloud.config.server.default-profile=production
 spring.cloud.config.server.default-label=latest
 spring.cloud.config.server.jdbc.sql=SELECT`key`,`value`FROM`properties`WHERE`application`=?AND`profile`=?AND`label`=?;
 spring.cloud.config.server.jdbc.order=0
+spring.cloud.config.server.encrypt.enabled=false
 
 spring.security.user.name=user
 spring.security.user.password=user
